src/snapshots/rust_debuginfo__tests__resolve_function@aarch64-apple-darwin.snap
---
source: src/tests.rs
expression: "resolver.resolve_function(\"main\").unwrap()"
snapshot_kind: text
---
Some(
    ResolvedAddress {
        address: "0x100000b0c",
    },
)
