src/snapshots/rust_debuginfo__tests__resolve_function@x86_64-apple-darwin-2.snap
---
source: src/tests.rs
expression: "resolver.resolve_function(\"function_call\").unwrap()"
snapshot_kind: text
---
Some(
    ResolvedAddress {
        address: "0x10000083f",
    },
)
