src/snapshots/rust_debuginfo__tests__resolve_function@x86_64-apple-darwin.snap
---
source: src/tests.rs
expression: "resolver.resolve_function(\"main\").unwrap()"
snapshot_kind: text
---
Some(
    ResolvedAddress {
        address: "0x100000968",
    },
)
