src/snapshots/rust_debuginfo__tests__resolve_function@x86_64-unknown-linux-gnu.snap
---
source: src/tests.rs
expression: "resolver.resolve_function(\"main\").unwrap()"
snapshot_kind: text
---
Some(
    ResolvedAddress {
        address: "0x7ab8",
    },
)
