src/snapshots/rust_debuginfo__tests__resolve_position@aarch64-apple-darwin-2.snap
---
source: src/tests.rs
expression: addrs
snapshot_kind: text
---
ResolvedAddress {
    address: "0x100000b0c",
}
