src/snapshots/rust_debuginfo__tests__resolve_position@aarch64-unknown-linux-gnu.snap
---
source: src/tests.rs
expression: addrs
snapshot_kind: text
---
ResolvedAddress {
    address: "0x6398",
}
